--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -5,7 +5,17 @@
 </head>
 <body>
     <div class="container">
+        <div class="text-center">
+            <h1>One Stop For All Your Shoe Needs</h1>
 
+            <form action="/stores">
+                <button type="submit">List of Stores</button>
+            </form>
+
+            <form action="/brands">
+                <button type="submit">List of Brands</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
