--- a/views/stores.html.twig
+++ b/views/stores.html.twig
@@ -5,7 +5,26 @@
 </head>
 <body>
     <div class="container">
+        <h1>Shoe Stores</h1>
 
+        <form action="/stores" method="post">
+            <label for="store_name">Add a store:</label>
+            <input type="text" name="store_name" id="store_name">
+            <button type="submit">Submit</button>
+        </form>
+
+        <form action="/">
+            <button type="submit">Back Home</button>
+        </form>
+
+        <h2>List of Stores</h2>
+        {% if stores is not empty %}
+        <ul>
+            {% for store in stores|sort %}
+                <li><a href="stores/{{ store.getId }}">{{ store.getName }}</a></li>
+            {% endfor %}
+        </ul>
+        {% endif %}
     </div>
 </body>
 </html>
