--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -18,15 +18,21 @@
             <h3>This store does not carry any listed brands of shoes.</h3>
         {% endif %}
 
-        <form action="/stores/{{ store.getId }}" method="post">
+        <form action="/add_brand" method="post">
             <label for="brand_id">Select a Brand</label>
-            <input value="{{ store.getId }}" id="brand_id" type="hidden">
+            <input value="{{ store.getId }}" id="store_id" name="store_id" type="hidden">
             <select id="brand_id" name="brand_id" type="int">
                 {% for brand in all_brands %}
                     <option value="{{ brand.getId }}">{{ brand.getTitle }}</option>
                 {% endfor %}
             </select>
             <button type="submit">Add Brand</button>
+        </form>
+
+        <form action="/delete_store" method="post">
+            <input name="_method" type="hidden" value="delete">
+            <input name="store_id" id="store_id" value="{{ store.getId }}" type="hidden">
+            <button type="submit">Remove this store</button>
         </form>
 
         <form action="/stores">
