--- a/views/stores.html.twig
+++ b/views/stores.html.twig
@@ -20,10 +20,11 @@
         <h2>List of Stores</h2>
         {% if stores is not empty %}
         <ul>
-            {% for store in stores|sort %}
+            {% for store in stores %}
                 <li><a href="stores/{{ store.getId }}">{{ store.getName }}</a></li>
             {% endfor %}
         </ul>
+
         {% endif %}
     </div>
 </body>
