Add working add_store route to individual brand

--- a/views/brand.html.twig
+++ b/views/brand.html.twig
@@ -18,9 +18,9 @@
             <h3>This brand is not carried at any listed stores.</h3>
         {% endif %}
 
-        <form action="/brands/{{ brand.getId }}" method="post">
+        <form action="/add_store" method="post">
             <label for="store_id">Select a Store</label>
-            <input value="{{ brand.getId }}" id="store_id" type="hidden">
+            <input value="{{ brand.getId }}" id="brand_id" name="brand_id" type="hidden">
             <select id="store_id" name="store_id" type="int">
                 {% for store in all_stores %}
                     <option value="{{ store.getId }}">{{ store.getName }}</option>
@@ -28,6 +28,7 @@
             </select>
             <button type="submit">Add Store</button>
         </form>
+        
 
         <form action="/brands/{{ brand.getId }}/delete" method="post">
             <input name="_method" type="hidden" value="delete">
