--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -19,7 +19,7 @@
         {% endif %}
 
         <form action="/add_brand" method="post">
-            <label for="brand_id">Select a Brand</label>
+            <label for="brand_id">Add a brand to the {{ store.getName }} inventory:</label>
             <input value="{{ store.getId }}" id="store_id" name="store_id" type="hidden">
             <select id="brand_id" name="brand_id" type="int">
                 {% for brand in all_brands %}
@@ -27,6 +27,18 @@
                 {% endfor %}
             </select>
             <button type="submit">Add Brand</button>
+        </form>
+
+        <form action="/delete_brands" method="post">
+            <input name="_method" type="hidden" value="delete">
+            <label for="brand_id">Remove a brand from this store</label>
+            <input value="{{ store.getId }}" name="store_id" id="store_id" type="hidden">
+            <select id="brand_id" name="brand_id" type="int">
+                {% for brand in brands %}
+                    <option value="{{ brand.getId }}">{{ brand.getTitle }}</option>
+                {% endfor %}
+            </select>
+            <button type="submit">Remove Brand</button>
         </form>
 
         <form action="/delete_store" method="post">
