--- a/views/stores.html.twig
+++ b/views/stores.html.twig
@@ -10,7 +10,7 @@
         <form action="/stores" method="post">
             <label for="store_name">Add a store:</label>
             <input type="text" name="store_name" id="store_name" required>
-            <button type="submit">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
         </form>
 
         <h2>List of Stores</h2>
@@ -23,14 +23,14 @@
 
         <form action="delete_all_stores" method="post">
             <input name="_method" type="hidden" value="delete">
-            <button type="submit">Remove All Stores</button>
+            <button type="submit"class="btn btn-danger">Remove All Stores</button>
         </form>
         {% else %}
             <h3>No stores are listed.</h3>
         {% endif %}
 
         <form action="/">
-            <button type="submit">Back Home</button>
+            <button type="submit"class="btn btn-primary">Back Home</button>
         </form>
     </div>
 </body>
