--- a/views/brand.html.twig
+++ b/views/brand.html.twig
@@ -22,11 +22,11 @@
             <label for="store_id">Select a Store</label>
             <input value="{{ brand.getId }}" id="brand_id" name="brand_id" type="hidden">
             <select id="store_id" name="store_id" type="int">
-                {% for store in all_stores %}
+                {% for store in all_stores|sort %}
                     <option value="{{ store.getId }}">{{ store.getName }}</option>
                 {% endfor %}
             </select>
-            <button type="submit">Add Store</button>
+            <button type="submit" class="btn btn-success">Add Store</button>
         </form>
 
         <form action="/delete_stores" method="post">
@@ -34,25 +34,25 @@
             <label for="store_id">Remove this brand from a store's inventory</label>
             <input value="{{ brand.getId }}" name="brand_id" id="brand_id" type="hidden">
             <select id="store_id" name="store_id" type="int">
-                {% for store in stores %}
+                {% for store in stores|sort %}
                     <option value="{{ store.getId }}">{{ store.getName }}</option>
                 {% endfor %}
             </select>
-            <button type="submit">Remove Store</button>
+            <button type="submit" class="btn btn-warning">Remove Store</button>
         </form>
 
         <form action="/delete_brand" method="post">
             <input name="_method" type="hidden" value="delete">
             <input name="brand_id" id="brand_id" value="{{ brand.getId }}" type="hidden">
-            <button type="submit">Remove this brand</button>
+            <button type="submit" class="btn btn-danger">Remove this brand</button>
         </form>
 
         <form action="/brands">
-            <button type="submit">Back to the list of brands</button>
+            <button type="submit" class="btn btn-info">Back to the list of brands</button>
         </form>
 
         <form action="/">
-            <button type="submit">Back home</button>
+            <button type="submit" class="btn btn-primary">Back home</button>
         </form>
     </div>
 </body>
