--- a/views/brands.html.twig
+++ b/views/brands.html.twig
@@ -10,8 +10,8 @@
 
         <form action="/brands" method="post">
             <label for="brand_title">Add a brand:</label>
-            <input type="text" name="brand_title" id="brand_title">
-            <button type="submit">Submit</button>
+            <input type="text" name="brand_title" id="brand_title" required>
+            <button type="submit" class="btn btn-success">Submit</button>
         </form>
 
         <h2>List of Brands</h2>
@@ -25,7 +25,7 @@
             </ul>
             <form action="delete_all_brands" method="post">
                 <input name="_method" type="hidden" value="delete">
-                <button type="submit">Remove All Brands</button>
+                <button type="submit" class="btn btn-danger">Remove All Brands</button>
             </form>
 
         {% else %}
@@ -33,7 +33,7 @@
         {% endif %}
 
         <form action="/">
-            <button type="submit">Back Home</button>
+            <button type="submit" class="btn btn-primary">Back Home</button>
         </form>
 
     </div>
