--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -6,14 +6,15 @@
 <body>
     <div class="container">
         <div class="text-center">
-            <h1>One Stop For All Your Shoe Needs</h1>
-
+            <div class="page-header">
+              <h1>We <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Shoes <small>one stop for all of your shoe needs</small></h1>
+            </div>
             <form action="/stores">
-                <button type="submit">List of Stores</button>
+                <button type="submit">View All Stores</button>
             </form>
 
             <form action="/brands">
-                <button type="submit">List of Brands</button>
+                <button type="submit">View All Brands</button>
             </form>
         </div>
     </div>
