--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -5,7 +5,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>{{ store.getName }}</h1>
+        
+        <div class="page-header">
+            <h1>{{ store.getName }}</h1>
+        </div>
 
         {% if brands is not empty %}
             <h3>Brands of shoes we carry:</h3>
