--- a/views/brands.html.twig
+++ b/views/brands.html.twig
@@ -5,8 +5,21 @@
 </head>
 <body>
     <div class="container">
+        <div class="page-header">
+            <h1>Brands</h1>
+        </div>
 
-        <h1>Brands</h1>
+
+        {% if brands is not empty %}
+            <ul class="list-group">
+                <li class="list-group-item active">List of Brands</li>
+                {% for brand in brands|sort %}
+                    <a href="brands/{{ brand.getId }}" class="list-group-item">{{ brand.getTitle }}</a>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <h3>No Brands are listed.</h3>
+        {% endif %}
 
         <form action="/brands" method="post">
             <label for="brand_title">Add a brand:</label>
@@ -14,22 +27,11 @@
             <button type="submit" class="btn btn-success">Submit</button>
         </form>
 
-        <h2>List of Brands</h2>
-
         {% if brands is not empty %}
-
-            <ul>
-                {% for brand in brands|sort %}
-                    <li><a href="brands/{{ brand.getId }}">{{ brand.getTitle }}</a></li>
-                {% endfor %}
-            </ul>
-            <form action="delete_all_brands" method="post">
-                <input name="_method" type="hidden" value="delete">
-                <button type="submit" class="btn btn-danger">Remove All Brands</button>
-            </form>
-
-        {% else %}
-            <h3>No Brands are listed.</h3>
+        <form action="delete_all_brands" method="post">
+            <input name="_method" type="hidden" value="delete">
+            <button type="submit" class="btn btn-danger">Remove All Brands</button>
+        </form>
         {% endif %}
 
         <form action="/">
