--- a/views/brands.html.twig
+++ b/views/brands.html.twig
@@ -23,15 +23,18 @@
 
         <form action="/brands" method="post">
             <label for="brand_title">Add a brand:</label>
-            <input type="text" name="brand_title" id="brand_title" required>
+            <input type="text" name="brand_title" id="brand_title" class="form-control" required>
+            <br>
             <button type="submit" class="btn btn-success">Submit</button>
         </form>
 
         {% if brands is not empty %}
-        <form action="delete_all_brands" method="post">
-            <input name="_method" type="hidden" value="delete">
-            <button type="submit" class="btn btn-danger">Remove All Brands</button>
-        </form>
+            <br>
+            <form action="delete_all_brands" method="post">
+                <input name="_method" type="hidden" value="delete">
+                <button type="submit" class="btn btn-danger">Remove All Brands</button>
+            </form>
+            <br>
         {% endif %}
 
         <form action="/">
