--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -10,11 +10,11 @@
               <h1>We <span class="glyphicon glyphicon-heart" aria-hidden="true"></span> Shoes <small>one stop for all of your shoe needs</small></h1>
             </div>
             <form action="/stores">
-                <button type="submit">View All Stores</button>
+                <button type="submit" class="btn btn-primary btn-lg">View All Stores</button>
             </form>
 
             <form action="/brands">
-                <button type="submit">View All Brands</button>
+                <button type="submit" class="btn btn-primary btn-lg">View All Brands</button>
             </form>
         </div>
     </div>
