--- a/views/store.html.twig
+++ b/views/store.html.twig
@@ -5,18 +5,18 @@
 </head>
 <body>
     <div class="container">
-        
+
         <div class="page-header">
             <h1>{{ store.getName }}</h1>
         </div>
 
         {% if brands is not empty %}
-            <h3>Brands of shoes we carry:</h3>
-            <ol>
-                {% for brand in brands %}
-                <li>{{ brand.getTitle }}</li>
+        <ul class="list-group">
+            <li class="list-group-item active">Brands of shoes we carry</li>
+                {% for brand in brands|sort %}
+                <li class="list-group-item">{{ brand.getTitle }}</li>
                 {% endfor %}
-            </ol>
+        </ul>
         {% else %}
             <h3>This store does not carry any listed brands of shoes.</h3>
         {% endif %}
@@ -24,11 +24,12 @@
         <form action="/add_brand" method="post">
             <label for="brand_id">Add a brand to the {{ store.getName }} inventory:</label>
             <input value="{{ store.getId }}" id="store_id" name="store_id" type="hidden">
-            <select id="brand_id" name="brand_id" type="int">
+            <select id="brand_id" name="brand_id" type="int" class="form-control">
                 {% for brand in all_brands|sort %}
                     <option value="{{ brand.getId }}">{{ brand.getTitle }}</option>
                 {% endfor %}
             </select>
+            <br>
             <button type="submit" class="btn btn-success">Add Brand</button>
         </form>
 
@@ -36,19 +37,24 @@
             <input name="_method" type="hidden" value="delete">
             <label for="brand_id">Remove a brand from this store</label>
             <input value="{{ store.getId }}" name="store_id" id="store_id" type="hidden">
-            <select id="brand_id" name="brand_id" type="int">
+            <select id="brand_id" name="brand_id" type="int" class="form-control">
                 {% for brand in brands|sort %}
                     <option value="{{ brand.getId }}">{{ brand.getTitle }}</option>
                 {% endfor %}
             </select>
+            <br>
             <button type="submit" class="btn btn-warning">Remove Brand</button>
         </form>
+
+        <br>
 
         <form action="/delete_store" method="post">
             <input name="_method" type="hidden" value="delete">
             <input name="store_id" id="store_id" value="{{ store.getId }}" type="hidden">
             <button type="submit" class="btn btn-danger">Remove this store</button>
         </form>
+
+        <br>
 
         <form action="/stores">
             <button type="submit" class="btn btn-info">Back to the list of stores</button>
